force-app/main/default/objects/Materials_and_Consumables__c/Materials_and_Consumables__c.object-meta.xml
<CustomObject>
    <label>Materials and Consumables</label>
    <nameField>
        <label>Materials and Consumables  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materials and Consumables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>