force-app/main/default/objects/Materials_and_Consumables__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Materials and Consumables</relationshipLabel>
    <relationshipName>Materials_and_Consumables</relationshipName>
    <type>Lookup</type>
</CustomField>