force-app/main/default/objects/Materials_and_Consumables__c/fields/Costs__c.field-meta.xml
<CustomField>
    <fullName>Costs__c</fullName>
    <label>Costs</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>