force-app/main/default/objects/Materials_and_Consumables__c/fields/Materials_and_Consumables_Name__c.field-meta.xml
<CustomField>
    <fullName>Materials_and_Consumables_Name__c</fullName>
    <label>Materials and Consumables Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>